app/src/main/java/com/example/bookclub/errors/AccountNewPasswordNotMatchedException.java
package com.example.bookclub.errors;

public class AccountNewPasswordNotMatchedException extends RuntimeException {
    public AccountNewPasswordNotMatchedException() {
        super("NewPassword not matched");
    }
}
